fix overflow x

--- a/src/input.css
+++ b/src/input.css
@@ -3,11 +3,11 @@
 @tailwind utilities;
 
 body {
-  font-family: "poppins", "sans-serif";
+  font-family: "Poppins", "sans-serif";
 }
 
 .navbar-fixed {
-  @apply fixed top-0 left-0 w-full z-50 /* w-full fixed z-[999] bg-white/60  backdrop-blur-sm; */
+  @apply w-full fixed z-[999] bg-white/60  backdrop-blur-sm;
   box-shadow: inset 0 -1px 0 0 rgba(0, 0, 0, 0.1);
 }
 
